# Luthier

./: .gitattributes  .gitignore  ARCHITECTURE.md  ARCHITECTURE_CONFORMANCE.md  ARCHITECTURE_WAVE2_AUDIT.md  CONTRIBUTING.md  Cargo.toml  FRONTEND_ARCHITECTURE.md  LICENSE  README.md  build-creator-e-abrir.sh  build-luthier-e-abrir.sh  context.md  debito.md  deny.toml  lefthook.yml  rodar-frontend-lan.sh  rodar-luthier-lan.sh
.cargo/: audit.toml
.github/workflows/: ci.yml
apps/creator-tauri/: README.md  components.json  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/creator-tauri/scripts/: prepare-linux-compat.sh  prepare-orchestrator-base.sh
apps/creator-tauri/src/: App.tsx  i18n.ts  main.tsx  styles.css
apps/creator-tauri/src-tauri/: Cargo.toml  README.md  tauri.conf.json
apps/creator-tauri/src-tauri/src/: lib.rs  main.rs
apps/creator-tauri/src/api/: tauri.ts
apps/creator-tauri/src/components/: Field.tsx  theme-provider.tsx
apps/creator-tauri/src/components/form/: FormControls.tsx  form-controls-core.tsx  form-controls-feature-state.tsx  form-controls-lists.tsx
apps/creator-tauri/src/components/ui/: alert.tsx  badge.tsx  button.tsx  dialog.tsx  input.tsx  item.tsx  select.tsx  sidebar.tsx  switch.tsx  table.tsx  textarea.tsx
apps/creator-tauri/src/features/creator/: AppSidebar.tsx  CreatorPage.tsx  creator-controller-utils.ts  creator-copy.en-US.ts  creator-copy.pt-BR.ts  creator-copy.ts  creator-copy.validation.en-US.ts  creator-copy.validation.pt-BR.ts  creator-field-validation.ts  creator-page-shared.tsx  useCreatorController.ts
apps/creator-tauri/src/lib/: cva.ts
apps/creator-tauri/src/models/: config.ts
apps/creator-tauri/src/styles/: app.css
apps/luthier/: .madgerc  .prettierignore  README.md  components.json  dependency-cruiser.cjs  eslint.config.mjs  index.html  knip.json  package-lock.json  package.json  tailwind.config.ts  vite.config.ts  vitest.config.ts
apps/luthier/scripts/: prepare-luthier-orchestrator-base.sh
apps/luthier/src/: App.tsx  i18n.ts  main.tsx
apps/luthier/src-tauri/: Cargo.toml  README.md  tauri.conf.json
apps/luthier/src-tauri/src/: error.rs  facade.rs  lib.rs  main.rs
apps/luthier/src-tauri/src/application/: ports.rs
apps/luthier/src-tauri/src/application/use_cases/: create_executable.rs  extract_icon.rs  hash_executable.rs  import_registry.rs  list_fs.rs  mod.rs  payload_import.rs  prepare_hero.rs  search_hero.rs  test_configuration.rs  winetricks_available.rs
apps/luthier/src-tauri/src/domain/: mod.rs  paths.rs  validation.rs
apps/luthier/src-tauri/src/infrastructure/: fs_repo.rs  http_client.rs  image_codec.rs  logging.rs  mod.rs  pe_icon_reader.rs  registry_parser.rs  winetricks_catalog.rs
apps/luthier/src-tauri/src/models/: dto.rs  hero.rs  mod.rs  registry.rs
apps/luthier/src/api/: tauri.ts
apps/luthier/src/components/: theme-provider.tsx
apps/luthier/src/models/: config.ts
apps/luthier/src/styles/: app.css
apps/luthier/src/test/: setup.ts
bins/creator-cli/: Cargo.toml
bins/creator-cli/src/: main.rs
bins/luthier-cli/: Cargo.toml
bins/luthier-cli/src/: main.rs
bins/luthier-orchestrator/: Cargo.toml
bins/luthier-orchestrator-injector/: Cargo.toml
bins/luthier-orchestrator-injector/src/: main.rs
bins/luthier-orchestrator/src/: cli.rs  instance_lock.rs  launch.rs  logging.rs  main.rs  mounts.rs  overrides.rs  payload.rs  splash.rs
bins/luthier-orchestrator/src/application/: doctor_flow.rs  mod.rs  play_flow.rs  ports.rs  runtime_overrides.rs  winecfg_flow.rs
bins/luthier-orchestrator/src/commands/: config.rs  doctor.rs  mod.rs  payload.rs  play.rs  show_config.rs  winecfg.rs
bins/luthier-orchestrator/src/domain/: errors.rs  feature_policy.rs  mod.rs  models.rs
bins/luthier-orchestrator/src/infrastructure/: flow_runtime_adapter.rs  mod.rs  mounts_adapter.rs  paths.rs  payload_loader.rs  process_adapter.rs
bins/luthier-orchestrator/src/services/: gamescope_flags.rs  integrity_service.rs  launch_plan_builder.rs  mod.rs  prefix_setup_service.rs  registry_apply_service.rs  runtime_env_builder.rs  runtime_flags.rs  script_runner.rs  winecfg_apply_service.rs
bins/luthier-orchestrator/src/splash/: assets.rs  child_process.rs  input.rs  mod.rs  progress_events.rs  renderer.rs  state.rs  text.rs  theme.rs
bins/orchestrator/: Cargo.toml
bins/orchestrator-injector/: Cargo.toml
bins/orchestrator-injector/src/: main.rs
bins/orchestrator/src/: cli.rs  instance_lock.rs  launch.rs  logging.rs  main.rs  mounts.rs  overrides.rs  payload.rs  splash.rs
bins/orchestrator/src/commands/: config.rs  doctor.rs  mod.rs  play.rs  show_config.rs  winecfg.rs
crates/creator-core/: Cargo.toml
crates/creator-core/src/: error.rs  lib.rs
crates/luthier-core/: Cargo.toml
crates/luthier-core/src/: error.rs  lib.rs  models.rs
crates/luthier-core/src/application/: create_orchestrator_binary.rs  hash.rs  mod.rs  ports.rs  validate_game_config.rs
crates/luthier-core/src/domain/: mod.rs  path_rules.rs  validation_rules.rs
crates/luthier-core/src/infrastructure/: file_io.rs  injector_adapter.rs  mod.rs
crates/luthier-orchestrator-core/: Cargo.toml
crates/luthier-orchestrator-core/src/: asset_container.rs  config.rs  doctor.rs  doctor_dependency_checks.rs  doctor_models.rs  doctor_runtime_selection.rs  error.rs  injector.rs  lib.rs  observability.rs  prefix.rs  process.rs  trailer.rs
crates/luthier-orchestrator-core/src/doctor/: dependency_checks.rs  host_probe.rs  mod.rs  runtime_selection.rs  status_policy.rs
crates/orchestrator-core/: Cargo.toml
crates/orchestrator-core/src/: config.rs  doctor.rs  error.rs  injector.rs  lib.rs  observability.rs  prefix.rs  process.rs  trailer.rs
docs/: context-checkpoints.md  implementation-log.md
scripts/: check-backend-tauri-clippy.sh  check-frontend-quality.sh  check-quality.sh  check-rust-architecture.sh  check-rust-deadcode.sh  check-rust-quality.sh  check-rust-security.sh  rust-architecture.rules
scripts/dev/: build-luthier-and-open.sh  run-luthier-lan.sh
(+150 files in other folders)
