[workspace]
resolver = "2"
members = [
  "apps/creator-tauri/src-tauri",
  "bins/creator-cli",
  "crates/orchestrator-core",
  "crates/creator-core",
  "bins/orchestrator",
  "bins/orchestrator-injector",
]

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Game Orchestrator Team"]

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4", "serde"] }
