[workspace]
resolver = "2"
members = [
  "apps/luthier/src-tauri",
  "bins/luthier-cli",
  "crates/luthier-orchestrator-core",
  "crates/luthier-core",
  "bins/luthier-orchestrator",
  "bins/luthier-orchestrator-injector",
]

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Luthier Team"]

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4", "serde"] }

[workspace.lints.rust]
unsafe_code = "deny"
unreachable_pub = "warn"
private_interfaces = "warn"
private_bounds = "warn"

[workspace.lints.clippy]
redundant_pub_crate = "warn"
unwrap_used = "warn"
expect_used = "warn"
todo = "warn"
dbg_macro = "warn"
