[package]
name = "creator-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
creator-core = { path = "../../crates/creator-core" }
orchestrator-core = { path = "../../crates/orchestrator-core" }
serde_json.workspace = true
