[package]
name = "luthier-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
luthier-core = { path = "../../crates/luthier-core" }
luthier-orchestrator-core = { path = "../../crates/luthier-orchestrator-core" }
serde_json.workspace = true
