[package]
name = "luthier-orchestrator-injector"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
luthier-orchestrator-core = { path = "../../crates/luthier-orchestrator-core" }
