[package]
name = "luthier-orchestrator"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
sha2.workspace = true
luthier-orchestrator-core = { path = "../../crates/luthier-orchestrator-core" }
minifb = "0.27"
font8x8 = "0.3"
fontdb = "0.23"
fontdue = "0.9"
png = "0.17"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
