[package]
name = "orchestrator"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
orchestrator-core = { path = "../../crates/orchestrator-core" }
