[package]
name = "creator-tauri-backend"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
tauri-commands = ["dep:tauri"]

[dependencies]
creator-core = { path = "../../../crates/creator-core" }
orchestrator-core = { path = "../../../crates/orchestrator-core" }
serde.workspace = true
serde_json.workspace = true
tauri = { version = "1", optional = true, default-features = false }
