[package]
name = "luthier-backend"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
tauri-commands = ["dep:tauri"]
custom-protocol = ["tauri/custom-protocol"]

[dependencies]
base64 = "0.22"
luthier-core = { path = "../../../crates/luthier-core" }
image = { version = "0.25", default-features = false, features = ["ico", "png", "jpeg", "gif", "webp"] }
luthier-orchestrator-core = { path = "../../../crates/luthier-orchestrator-core" }
pelite = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
tauri = { version = "1", optional = true, default-features = false, features = [ "dialog-open", "wry"] }
urlencoding = "2.1"

[build-dependencies]
tauri-build = { version = "1", features = [] }
